--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -112,11 +112,12 @@ function onEncounterDateChange()
     /* Display the who staging based on the age  */
     if (age &lt; ADULT)
     {
-        jq('#initialWhoStageAd').hide()
+        jq('#initialWhoStageCh').hide();
     }
     else
     {
-        jq('#initialWhoStageCh').hide()
+
+        jq('#initialWhoStageAd').hide();
     }
 }
 
