--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -112,12 +112,13 @@ function onEncounterDateChange()
     /* Display the who staging based on the age  */
     if (age &lt; ADULT)
     {
-        jq('#initialWhoStageCh').hide();
+        jq('#initialWhoStageAd').hide();
+        jq('#initialWhoStageCh').show();
     }
     else
     {
-
-        jq('#initialWhoStageAd').hide();
+        jq('#initialWhoStageCh').hide();
+        jq('#initialWhoStageAd').show();
     }
 }
 
