--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -111,15 +111,26 @@ function onEncounterDateChange()
 
     /* Display the who staging based on the age  */
 
-    if (age &lt; ADULT)
+    if (age &lt;ADULT)
     {
-        jq('#initialWhoStageAd').hide()
-        //jq('#startWhoStageAd').hide()
+        jq('#initialWhoStageAd').hide();
+
     }
     else
     {
-        jq('#initialWhoStageCh').hide()
-        //jq('#startWhoStageCh').hide()
+        jq('#initialWhoStageCh').hide();
+
+    }
+
+    if (age &gt;=ADULT)
+    {
+        jq('#initialWhoStageCh').hide();
+
+    }
+    else
+    {
+        jq('#initialWhoStageAd').hide();
+
     }
 }
 
