--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -127,7 +127,7 @@ function onEncounterDateChange()
         jq('#initialWhoStageCh').hide();
 
     }
-    else
+    else if (age &lt;ADULT)
     {
         jq('#initialWhoStageAd').hide();
 
