--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -329,8 +329,8 @@ jq(function() {
     OnTransferStatusChange();
 
     /* hide or display ART History in fields */
-    //  jq('#art-status input').click(OnARTStatusChange);
-    //  OnARTStatusChange();
+    jq('#art-status input').click(OnARTStatusChange);
+    OnARTStatusChange();
 
     jq('#ms_mp input').click(setMaritalStatus);
     setMaritalStatus();
