--- a/omod/src/main/webapp/resources/htmlforms/obstetricHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/obstetricHistory.html
@@ -36,6 +36,24 @@
 		}
 	</style>
 
+	<script type="text/javascript">
+		jq(document).ready(function(){
+			for (var i = 1; i &lt;= 15; i++) {
+				jq('#show-option-' + i).click(function() {
+					var linkId = jq(this).attr('id');
+					var n = linkId.replace('show-option-', '')
+					jq('#manage-options-' + n).show();
+				});
+
+				jq('#hide-option-' + i).on("click",function() {
+					var linkId = jq(this).attr('id');
+					var n = linkId.replace('hide-option-', '')
+					jq('#manage-options-' + n).hide();
+				});
+			}
+		});
+	</script>
+
 	<!-- Should always be the current user -->
 	<div style="display:none">
 		<encounterProvider default="currentUser"/>
@@ -106,123 +124,127 @@
 									 answerLabels="Live Birth,Still Birth,Abortion,Miscarriage"/>
 							</td>
 							<td valign="top">
-								<table>
-									<tr>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="None"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="134612AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Maternal death"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="127592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Retained placenta"
-												 style="checkbox"/>
-										</td>
-									</tr>
-									<tr>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="146192AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Cardiac arrest"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="154223AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Neonatal death"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Seizure"
-												 style="checkbox"/>
-										</td>
-									</tr>
-									<tr>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="140238AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Fever"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="113195AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Obstetrical uterus rupture"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="123396AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Vagina discharge"
-												 style="checkbox"/>
-										</td>
-									</tr>
-									<tr>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="139981AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Foot-drop"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="230AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Postpartum hemorrhage"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="49AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Vesical-vaginal fistula"
-												 style="checkbox"/>
-										</td>
-									</tr>
-									<tr>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="117069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Infection specific to perinatal period"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="129318AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Postpartum psychosis"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Other (non-coded)"
-												 style="checkbox"/>
-										</td>
-									</tr>
-									<tr>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="135592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Loss of consciousness"
-												 style="checkbox"/>
-										</td>
-										<td valign="top">
-											<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerConceptId="130AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabel="Puerperal sepsis"
-												 style="checkbox"/>
-										</td>
-										<td></td>
-									</tr>
-								</table>
+								<a href="#" id="show-option-{n}">Show |</a>
+								<a href="#" id="hide-option-{n}"> Hide</a>
+								<div id="manage-options-{n}" style="display: none">
+									<table>
+										<tr>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="None"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="134612AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Maternal death"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="127592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Retained placenta"
+													 style="checkbox"/>
+											</td>
+										</tr>
+										<tr>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="146192AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Cardiac arrest"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="154223AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Neonatal death"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Seizure"
+													 style="checkbox"/>
+											</td>
+										</tr>
+										<tr>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="140238AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Fever"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="113195AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Obstetrical uterus rupture"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="123396AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Vagina discharge"
+													 style="checkbox"/>
+											</td>
+										</tr>
+										<tr>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="139981AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Foot-drop"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="230AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Postpartum hemorrhage"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="49AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Vesical-vaginal fistula"
+													 style="checkbox"/>
+											</td>
+										</tr>
+										<tr>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="117069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Infection specific to perinatal period"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="129318AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Postpartum psychosis"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Other (non-coded)"
+													 style="checkbox"/>
+											</td>
+										</tr>
+										<tr>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="135592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Loss of consciousness"
+													 style="checkbox"/>
+											</td>
+											<td valign="top">
+												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerConceptId="130AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+													 answerLabel="Puerperal sepsis"
+													 style="checkbox"/>
+											</td>
+											<td></td>
+										</tr>
+									</table>
+								</div>
 							</td>
 						</tr>
 					</obsgroup>
