--- a/omod/src/main/webapp/resources/htmlforms/obstetricHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/obstetricHistory.html
@@ -13,263 +13,284 @@
 -->
 <htmlform>
 
-	<style type="text/css">
-		table.tb {
+<style type="text/css">
+	table.tb {
 		background-color: #FFFFFF;
 		border: 1px solid black;
-		}
+	}
 
-		table.tb1 {
-		border: 1px solid black;
-		vertical-align: baseline;
-		text-align: left;
-		background-color: #FFFFFF;
-		}
-
-		table.tb1 tr th, table.tb1 tr td {
+	table.tb1 tr th, table.tb1 tr td {
 		border: 0;
 		padding: 10px;
-		}
+	}
 
-		table {
+	table {
 		border-collapse: collapse;
+	}
+</style>
+
+<script type="text/javascript">
+	jq(document).ready(function () {
+		for (var i = 1; i &lt;= 15; i++) {
+			jq('#show-option-' + i).click(function () {
+				var linkId = jq(this).attr('id');
+				var n = linkId.replace('show-option-', '')
+				jq('#manage-options-' + n).show();
+			});
+
+			jq('#hide-option-' + i).on("click", function () {
+				var linkId = jq(this).attr('id');
+				var n = linkId.replace('hide-option-', '')
+				jq('#manage-options-' + n).hide();
+			});
 		}
-	</style>
+	});
+</script>
 
-	<script type="text/javascript">
-		jq(document).ready(function(){
-			for (var i = 1; i &lt;= 15; i++) {
-				jq('#show-option-' + i).click(function() {
-					var linkId = jq(this).attr('id');
-					var n = linkId.replace('show-option-', '')
-					jq('#manage-options-' + n).show();
-				});
+<!-- Should always be the current user -->
+<div style="display:none">
+	<encounterProvider default="currentUser"/>
+</div>
 
-				jq('#hide-option-' + i).on("click",function() {
-					var linkId = jq(this).attr('id');
-					var n = linkId.replace('hide-option-', '')
-					jq('#manage-options-' + n).hide();
-				});
-			}
-		});
-	</script>
+<div class="ke-form-header">
+	<table width="100%">
+		<tr>
+			<td>Date:
+				<encounterDate id="encounter-date" showTime="true"/>
+			</td>
+			<td>Location:
+				<encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" type="autocomplete"/>
+			</td>
+		</tr>
+	</table>
+</div>
 
-	<!-- Should always be the current user -->
-	<div style="display:none">
-		<encounterProvider default="currentUser"/>
-	</div>
+<div class="ke-form-content">
+<table align="center" class="tb" cellspacing="0">
+<tr>
+	<th style="background-color: #696969; color: #ffffff;">Pregnancy<br/>Order</th>
+	<th style="background-color: #696969; color: #ffffff;">Year<br/>(dd/mm/yyyy)</th>
+	<th style="background-color: #696969; color: #ffffff;">Number<br/>of Times<br/>ANC<br/>Attended</th>
+	<th style="background-color: #696969; color: #ffffff;">Place of delivery</th>
+	<th style="background-color: #696969; color: #ffffff;">Maturity</th>
+	<th style="background-color: #696969; color: #ffffff;">Duration<br/>of<br/>Labor</th>
+	<th style="background-color: #696969; color: #ffffff;">Type of Delivery</th>
+	<th style="background-color: #696969; color: #ffffff;">Birth<br/>Weight(Kg)</th>
+	<th style="background-color: #696969; color: #ffffff;">Sex</th>
+	<th style="background-color: #696969; color: #ffffff;">Outcome</th>
+	<th style="background-color: #696969; color: #ffffff;">Event's<br/>During<br/>Puerperium</th>
+</tr>
+<repeat>
+<template>
+	<obsgroup groupingConceptId="160593AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+		<tr style="border:1px solid black">
+			<td valign="top">
+				<obs conceptId="5624AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="160602AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="1425AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="1572AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						answerConceptIds="1589AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159671AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159662AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159670AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1588AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159372AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1601AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1536AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						answerLabels="Hospital,Provincial hospital,District hospital,Sub-district hospital,Health clinic,Primary care clinic,Enroute to H. Facility,Home,Unknown,Other"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="1409AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="159616AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="5630AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+					 answerConceptIds="1170AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1171AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1172AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,118159AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159739AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+					 answerLabels="Vaginal delivery,Cesarean,Breech,Forceps or vacuum, Emergency cesarean, Unknown, Other"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="5916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="1587AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+					 answerConceptIds="1534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+					 answerLabels="Male,Female,Other,Unknown"/>
+			</td>
+			<td valign="top">
+				<obs conceptId="159917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+					 answerConceptIds="159035AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,126127AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,48AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+					 answerLabels="Live Birth,Still Birth,Abortion,Miscarriage"/>
+			</td>
+			<td valign="top">
+				<a href="#" id="show-option-{n}">Show |</a>
+				<a href="#" id="hide-option-{n}"> Hide</a>
 
-	<div class="ke-form-header">
-		<table width="100%">
-			<tr>
-				<td>Date:
-					<encounterDate id="encounter-date" showTime="true"/>
-				</td>
-				<td>Location:
-					<encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" type="autocomplete"/>
-				</td>
-			</tr>
-		</table>
-	</div>
-
-	<div class="ke-form-content">
-		<table align="center" class="tb" cellspacing="10">
-			<tr>
-				<td style="background-color: #696969; color: #ffffff;">Pregnancy Order</td>
-				<td style="background-color: #696969; color: #ffffff;">Year(dd/mm/yyyy)</td>
-				<td style="background-color: #696969; color: #ffffff;">Number of Times ANC Attended</td>
-				<td style="background-color: #696969; color: #ffffff;">Place of delivery</td>
-				<td style="background-color: #696969; color: #ffffff;">Maturity</td>
-				<td style="background-color: #696969; color: #ffffff;">Duration of Labor</td>
-				<td style="background-color: #696969; color: #ffffff;">Type of Delivery</td>
-				<td style="background-color: #696969; color: #ffffff;">Birth Weight (Kg)</td>
-				<td style="background-color: #696969; color: #ffffff;">Sex</td>
-				<td style="background-color: #696969; color: #ffffff;">Outcome</td>
-				<td style="background-color: #696969; color: #ffffff;">Event's During Puerperium</td>
-			</tr>
-			<repeat>
-				<template>
-					<obsgroup groupingConceptId="160593AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-						<tr  style="border:1px solid black">
+				<div id="manage-options-{n}" style="display: none">
+					<table>
+						<tr>
 							<td valign="top">
-								<obs conceptId="5624AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="160602AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="1425AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="1572AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="1409AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="159616AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="5630AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="5916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-							<td valign="top">
-								<obs conceptId="1587AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=""/>
-							</td>
-							<td valign="top">
-								<obs conceptId="159917AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="159035AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,126127AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,48AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Live Birth,Still Birth,Abortion,Miscarriage"/>
-							</td>
-							<td valign="top">
-								<a href="#" id="show-option-{n}">Show |</a>
-								<a href="#" id="hide-option-{n}"> Hide</a>
-								<div id="manage-options-{n}" style="display: none">
-									<table>
-										<tr>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="None"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="134612AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Maternal death"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="127592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Retained placenta"
-													 style="checkbox"/>
-											</td>
-										</tr>
-										<tr>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="146192AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Cardiac arrest"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="154223AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Neonatal death"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Seizure"
-													 style="checkbox"/>
-											</td>
-										</tr>
-										<tr>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="140238AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Fever"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="113195AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Obstetrical uterus rupture"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="123396AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Vagina discharge"
-													 style="checkbox"/>
-											</td>
-										</tr>
-										<tr>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="139981AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Foot-drop"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="230AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Postpartum hemorrhage"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="49AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Vesical-vaginal fistula"
-													 style="checkbox"/>
-											</td>
-										</tr>
-										<tr>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="117069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Infection specific to perinatal period"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="129318AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Postpartum psychosis"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Other (non-coded)"
-													 style="checkbox"/>
-											</td>
-										</tr>
-										<tr>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="135592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Loss of consciousness"
-													 style="checkbox"/>
-											</td>
-											<td valign="top">
-												<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptId="130AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabel="Puerperal sepsis"
-													 style="checkbox"/>
-											</td>
-											<td></td>
-										</tr>
-									</table>
-								</div>
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="None"
+									 style="checkbox"/>
 							</td>
 						</tr>
-					</obsgroup>
-				</template>
-				<render n="1" concept=" "/>
-				<render n="2" concept=" "/>
-				<render n="3" concept=" "/>
-				<render n="4" concept=" "/>
-				<render n="5" concept=" "/>
-				<render n="6" concept=" "/>
-				<render n="7" concept=" "/>
-				<render n="8" concept=" "/>
-				<render n="9" concept=" "/>
-				<render n="10" concept=" "/>
-				<render n="11" concept=" "/>
-				<render n="12" concept=" "/>
-				<render n="13" concept=" "/>
-				<render n="14" concept=" "/>
-				<render n="15" concept=" "/>
-			</repeat>
-		</table>
-	</div>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="134612AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Maternal death"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="127592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Retained placenta"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="146192AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Cardiac arrest"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="154223AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Neonatal death"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Seizure"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="140238AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Fever"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="113195AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Obstetrical uterus rupture"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="123396AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Vagina discharge"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="139981AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Foot-drop"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="230AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Postpartum hemorrhage"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="49AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Vesical-vaginal fistula"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="117069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Infection specific to perinatal period"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="129318AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Postpartum psychosis"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="135592AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Loss of consciousness"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="130AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Puerperal sepsis"
+									 style="checkbox"/>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top">
+								<obs conceptId="1576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Other (non-coded)"
+									 style="checkbox"/>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</td>
+		</tr>
+	</obsgroup>
+</template>
+<render n="1" concept=" "/>
+<render n="2" concept=" "/>
+<render n="3" concept=" "/>
+<render n="4" concept=" "/>
+<render n="5" concept=" "/>
+<render n="6" concept=" "/>
+<render n="7" concept=" "/>
+<render n="8" concept=" "/>
+<render n="9" concept=" "/>
+<render n="10" concept=" "/>
+<render n="11" concept=" "/>
+<render n="12" concept=" "/>
+<render n="13" concept=" "/>
+<render n="14" concept=" "/>
+<render n="15" concept=" "/>
+</repeat>
+</table>
+</div>
 
-	<div class="ke-form-footer">
-		<submit/>
-	</div>
+<div class="ke-form-footer">
+	<submit/>
+</div>
 
 </htmlform>
