Renamed Vaccine to Preventive Services in the MCHMS Preventive Services Form. PT: https://www.pivotaltracker.com/story/show/63517076

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPreventiveServices.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPreventiveServices.html
@@ -84,7 +84,7 @@
 						<legend>General</legend>
 						<table align="center" width="100%" class="tb1">
 							<tr>
-								<td style="background-color: #696969; color: #ffffff;">Vaccine</td>
+								<td style="background-color: #696969; color: #ffffff;">Preventive Services</td>
 								<td style="background-color: #696969; color: #ffffff;">Sequence No.</td>
 								<td style="background-color: #696969; color: #ffffff;">Date</td>
 								<td style="background-color: #696969; color: #ffffff;">Next
